kubernetes/apps/kube-system/cilium/policies/allow-media-server-internal.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# media-server internal: all pods in media-server can talk to each other
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-media-server-internal
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: media-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media-server
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: media-server
